aligned search button so it was no longer cut off on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -104,3 +104,7 @@ li::first-letter {
 .weather-forecast-temperatures {
   font-size: 14px;
 }
+
+.btn-outline-dark {
+  margin-left: 60px;
+}
